[package]
name = "rust-animation"
description = "OpenGL based Animation Toolkit written in Rust"
version = "0.1.11"
edition = "2021"
repository = "https://github.com/joone/rust-animation"
keywords = ["bsd", "opengl", "animation", "api"]
license = "BSD-3-Clause"
authors= ["Joone Hur <joone.hur@gmail.com>"]
exclude = [".gitignore", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.14.1"
gl = "0.10.0"
image = "0.19.0"
keyframe = "1.0.4"
stretch = "0.3.2"

[dev-dependencies]
glfw = "0.42.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
