[package]
name = "rust-animation"
description = "wgpu based Animation Toolkit written in Rust"
version = "0.2.11"
edition = "2021"
repository = "https://github.com/joone/rust-animation"
keywords = ["bsd", "wgpu", "animation", "api"]
license = "BSD-3-Clause"
authors= ["Joone Hur <joone.hur@gmail.com>"]
exclude = [".gitignore", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
wgpu = "22.1.0"
image = "0.25.9"
keyframe = "1.1.1"
stretch = "0.3.2"
ab_glyph = "0.2.32"
pollster = "0.3.0"
bytemuck = { version = "1.25.0", features = ["derive"] }

[dev-dependencies]
winit = "0.29.15"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
